test/invalid/ExtendsToStringWithoutOverride/ExtendsToStringWithoutOverride.plume
/**
 * Uma classe que estende o object e reescreve o toString
 * mas nao coloca a palavra reservada override
 *
 * @author 37059, Rita Henriques
 * @version $Id: ExtendsToStringWithoutOverride.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
abstract class ExtendsToStringWithoutOverride extends Object is
	
  field name : String
  
  method toString : () -> String is
    "[" + name + "]"
